--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "core-js": "^2.6.5",
         "date-fns": "^1.30.1",
         "firebase": "^6.3.3",
+        "nprogress": "^0.2.0",
+        "numeral": "^2.0.6",
         "vue": "^2.6.10",
         "vue-cal": "^2.2.0",
         "vue-chartjs": "^3.4.2",
