addExtract component, clear validation errors, dynamic snackbars for all add/edit forms, extract dashboard data

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "vue-chartjs": "^3.4.2",
         "vue-router": "^3.0.3",
         "vuelidate": "^0.7.4",
-        "vuetify": "^2.0.3"
+        "vuetify": "^2.0.3",
+        "vuex": "^3.1.1"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^3.9.0",
