--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "vue-router": "^3.0.3",
         "vuelidate": "^0.7.4",
         "vuetify": "^2.0.3",
-        "vuex": "^3.1.1"
+        "vuex": "^3.1.1",
+        "vuex-router-sync": "^5.0.0"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^3.9.0",
