--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vue": "^2.6.10",
         "vue-cal": "^2.2.0",
         "vue-chartjs": "^3.4.2",
+        "vue-lottie": "^0.2.1",
         "vue-router": "^3.0.3",
         "vuelidate": "^0.7.4",
         "vuetify": "^2.0.3",
